Fix Alignment Issue

--- a/src/index.css
+++ b/src/index.css
@@ -50,11 +50,24 @@ body {
 }
 
 .container {
-  width: 100%;
+  width: 80%;
   margin-left: 10%;
   margin-right: 10%;
 }
-
+@media screen and (min-width: 720px) {
+  .container {
+    width: 70%;
+    margin-left: 15%;
+    margin-right: 15%;
+  }
+}
+@media screen and (min-width: 600px) {
+  .container {
+    width: 40%;
+    margin-left: 30%;
+    margin-right: 30%;
+  }
+}
 .session {
   margin: auto 4rem;
 }
@@ -111,6 +124,7 @@ body {
 
 .clock h1 {
   font-size: 10rem;
+  text-align: center;
 }
 
 @media screen and (max-width: 560px) {
